# fitness-app

./: .editorconfig  .gitignore  CHANGELOG.md  Makefile  NOTICE  README.md  docker-compose.prod.yml  docker-compose.yml  render.yaml
apps/backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  entrypoint.sh  pyproject.toml  pytest.ini
apps/backend/accounts/: serializers.py  urls.py  views.py
apps/backend/config/: urls.py
apps/backend/config/settings/: base.py  local.py  prod.py  test.py
apps/backend/external_catalog/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/backend/external_catalog/migrations/: 0001_initial.py
apps/backend/foods/: admin.py  images.py  models.py  serializers.py  urls.py  views.py
apps/backend/foods/migrations/: 0001_initial.py  0002_cleanup_external_catalog.py  0003_fooditem_images_and_hash.py
apps/backend/nutrients/: admin.py  models.py
apps/backend/nutrients/migrations/: 0001_initial.py
apps/backend/nutrition/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
apps/backend/nutrition/migrations/: 0001_initial.py
apps/backend/preferences/: admin.py  models.py
apps/backend/preferences/migrations/: 0001_initial.py
apps/backend/scripts/: export_openapi.sh
apps/backend/tests/: test_accounts.py  test_external_catalog.py  test_foods_check.py  test_foods_ingest_images.py  test_foods_ingest_upsert.py  test_foods_typeahead.py  test_health.py  test_nutrition_day_log.py
contracts/: openapi.yaml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  RELEASE.md  ROADMAP.md
(+62 files in other folders)
