[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Illia",email = "illiadovho@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "psycopg[binary] (>=3.2.10,<4.0.0)",
    "sentry-sdk (>=2.37.1,<3.0.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "whitenoise (>=6.10.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-django = "^4.11.1"
pytest-cov = "^7.0.0"
model-bakery = "^1.20.5"
ruff = "^0.13.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.18.1"
django-stubs = "^5.2.4"
djangorestframework-stubs = "^3.16.2"

[tool.ruff.per-file-ignores]
"config/settings/local.py" = ["F403", "F405"]
"config/settings/prod.py" = ["F403", "F405"]
"config/settings/test.py" = ["F403", "F405"]
